@@ -1,3 +1,8 @@
+2010-07-07  Mike Krüger  <mkrueger@novell.com>
+
+	* Mono.TextEditor/TextMarker.cs: Text marker now defaults to
+	  visible.
+
 2010-07-05  Mike Krüger  <mkrueger@novell.com>
 
 	* Mono.TextEditor.Theatrics/SmartScrolledWindow.cs: Fixed GTK
